fixed layout problem with scrollbox

--- a/src/components/place/placeControls/style.styl
+++ b/src/components/place/placeControls/style.styl
@@ -4,6 +4,7 @@
   overflow: hidden
   height: 40px
   width: 100%
+  z-index: 10
   top: 10px
   left: 0
 
