--- a/src/components/place/placeInfo/style.styl
+++ b/src/components/place/placeInfo/style.styl
@@ -4,10 +4,6 @@
 
 .info
   padding: 10px 15px 0
-  margin-left: -100%
-
-  &.active
-    margin-left: 0
 
   &__title
     justify-content: center
