--- a/src/components/place/placeReviews/placeReview/style.styl
+++ b/src/components/place/placeReviews/placeReview/style.styl
@@ -2,10 +2,9 @@
 
 .review
   border-bottom: 1px solid #ddd
+  margin: 0 5px 0 0
   padding: 8px 0
-  margin: 0 auto
   display: flex
-  width: 270px
 
   &__avatar
     margin-right: 6px
@@ -66,6 +65,7 @@
       font-size: 12px
       cursor: pointer
       transition: .2s
+      display: inline-block
 
       &:hover
         text-decoration: underline
