--- a/src/components/place/style.styl
+++ b/src/components/place/style.styl
@@ -12,3 +12,9 @@
     transition: .5s cubic-bezier(.25, .93, .5, .98)
     flex-shrink: 0
     width: 100%
+
+    &:first-of-type
+      margin-left: -100%
+
+    &.active
+      margin-left: 0
