--- a/src/containers/place/style.styl
+++ b/src/containers/place/style.styl
@@ -1,7 +1,8 @@
 .place__container
+  justify-content: center
   align-items: center
   position: relative
-  min-height: 170px
   flex-flow: column
   overflow: hidden
+  display: flex
   flex-grow: 1
