--- a/src/shared/scrollbox/style.styl
+++ b/src/shared/scrollbox/style.styl
@@ -5,25 +5,22 @@
   
   .content
     width calc(100% + 20px)
-    padding-right 20px
-    min-height 100%
+    overflow-y scroll
+    max-height 100%
     font-size 20px
-    overflow auto
-    max-height: 100%
-
-    & > div
-      height: 800px
     
   .scrollbar
     border-left 1px solid rgba(#000, .15)
-    background-color transparent
+    background-color rgba(#fff, .5)
     position absolute
     height 100%
     right 0
     top 0
     
-    &:hover .thumb
-      width 8px
+    &:hover
+      background-color #fff
+      .thumb
+        width 8px
       
     &::before
       position absolute
